--- a/main.html
+++ b/main.html
@@ -102,23 +102,23 @@
         <div class="containerIF2">
             <div class="row row-cols-2">
 
-                <button type="button" class="btn btn-danger" id="btn-p3" style="width:490px;height:80px;border-radius: 50%;" onclick="sentMessageBotP3();">Tease</button>
+                <!-- <button type="button" class="btn btn-danger" id="btn-p3" style="width:490px;height:80px;border-radius: 50%;" onclick="sentMessageBotP3();">Tease</button> -->
                 <!-- <button type="button" class="btn btn-warning" id="btn-p2" style="width:600px;height:80px;border-radius: 50%;" onclick="sentMessageBotP2();">Confuse</button> -->
-                <button type="button" class="btn btn-warning" id="btn-p2" style="width:490px;height:80px;border-radius: 50%;" onclick="sentMessageBotP2();">Socialize</button>
+                <!-- <button type="button" class="btn btn-warning" id="btn-p2" style="width:490px;height:80px;border-radius: 50%;" onclick="sentMessageBotP2();">Socialize</button>
                 <button type="button" class="btn btn-success" id="btn-p1" style="width:490px;height:80px;border-radius: 50%;" onclick="sentMessageBotP1();">Help</button>
                 <button type="button" class="btn" id="btn-p5" style="background-color:white; width:490px;height:60px;border:2px white double; color: white;" onclick="sentMessageBotP0();"> </button>
                 <button type="button" class="btn" id="btn-p6" style="background-image:url(./src/happy.PNG);background-repeat: no-repeat; width:50px;height:60px; background-size: 50px 50px; border:2px yellow double; background-color: transparent;margin-left: 95px;" onclick="sentMessageBotP6();"> </button>
                 <button type="button" class="btn" id="btn-p7" style="background-image:url(./src/wow.PNG);background-repeat: no-repeat; width:50px;height:60px; background-size: 50px 50px; border:2px yellow double; background-color: transparent;" onclick="sentMessageBotP7();"> </button>
                 <button type="button" class="btn" id="btn-p8" style="background-image:url(./src/naughty.PNG);background-repeat: no-repeat; width:50px;height:60px; background-size: 50px 50px; border:2px yellow double; background-color: transparent;" onclick="sentMessageBotP8();"> </button>
                 <button type="button" class="btn" id="btn-p9" style="background-image:url(./src/unhappy2.PNG);background-repeat: no-repeat; width:50px;height:60px; background-size: 50px 50px; border:2px yellow double; background-color: transparent; " onclick="sentMessageBotP9();"> </button>
-                <button type="button" class="btn" id="btn-p10" style="background-image:url(./src/angry2.PNG);background-repeat: no-repeat; width:50px;height:60px; background-size: 50px 50px; border:2px yellow double; background-color: transparent;margin-right: 95px;" onclick="sentMessageBotP10();"> </button>
+                <button type="button" class="btn" id="btn-p10" style="background-image:url(./src/angry2.PNG);background-repeat: no-repeat; width:50px;height:60px; background-size: 50px 50px; border:2px yellow double; background-color: transparent;margin-right: 95px;" onclick="sentMessageBotP10();"> </button> -->
 
                 <!-- <button type="button" class="btn" id="btn-p5" style="background-color:red; width:900px;height:60px;border:2px blue double; color: white;" onclick="sentMessageBotP5();">Tease Cooperate</button> -->
                 <!-- <button type="button" class="btn" id="btn-p4" style="background-color:green; width:900px;height:60px;border:2px blue double; color: white;" onclick="sentMessageBotP4();">Help Cooperate</button> -->
  
-                <!-- <button type="button" class="btn btn-danger" id="btn-p3" style="width:600px;height:80px;border-radius: 50%;" onclick="sentMessageBotP3();">OK</button> -->
-                <!-- <button type="button" class="btn btn-warning" id="btn-p2" style="width:600px;height:80px;border-radius: 50%;" onclick="sentMessageBotP2();">Good</button> -->
-                <!-- <button type="button" class="btn btn-success" id="btn-p1" style="width:600px;height:80px;border-radius: 50%;" onclick="sentMessageBotP1();">Cool</button> 
+                <button type="button" class="btn btn-danger" id="btn-p3" style="width:600px;height:80px;border-radius: 50%;" onclick="sentMessageBotP3();">OK</button> 
+                <button type="button" class="btn btn-warning" id="btn-p2" style="width:600px;height:80px;border-radius: 50%;" onclick="sentMessageBotP2();">Good</button>
+                <button type="button" class="btn btn-success" id="btn-p1" style="width:600px;height:80px;border-radius: 50%;" onclick="sentMessageBotP1();">Cool</button> 
                <!--  <button type="button" class="btn btn-warning" id="btn-p6" style="width:800px;height:60px" onclick="sentMessageBotP6();">Confuse Cooperate</button> -->
             </div>
         </div>
