--- a/main.html
+++ b/main.html
@@ -116,9 +116,9 @@
                 <!-- <button type="button" class="btn" id="btn-p5" style="background-color:red; width:900px;height:60px;border:2px blue double; color: white;" onclick="sentMessageBotP5();">Tease Cooperate</button> -->
                 <!-- <button type="button" class="btn" id="btn-p4" style="background-color:green; width:900px;height:60px;border:2px blue double; color: white;" onclick="sentMessageBotP4();">Help Cooperate</button> -->
  
-                <button type="button" class="btn btn-danger" id="btn-p3" style="width:600px;height:80px;border-radius: 50%;" onclick="sentMessageBotP3();">OK</button> 
-                <button type="button" class="btn btn-warning" id="btn-p2" style="width:600px;height:80px;border-radius: 50%;" onclick="sentMessageBotP2();">Good</button>
-                <button type="button" class="btn btn-success" id="btn-p1" style="width:600px;height:80px;border-radius: 50%;" onclick="sentMessageBotP1();">Cool</button> 
+                <button type="button" class="btn btn-danger" id="btn-p3" style="width:600px;height:80px;" onclick="sentMessageBotP3();">OK</button> 
+                <button type="button" class="btn btn-warning" id="btn-p2" style="width:600px;height:80px;" onclick="sentMessageBotP2();">Good</button>
+                <button type="button" class="btn btn-success" id="btn-p1" style="width:600px;height:80px;" onclick="sentMessageBotP1();">Cool</button> 
                <!--  <button type="button" class="btn btn-warning" id="btn-p6" style="width:800px;height:60px" onclick="sentMessageBotP6();">Confuse Cooperate</button> -->
             </div>
         </div>
